--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^2.6.5",
+    "lodash-es": "^4.17.20",
     "qs": "^6.9.4",
     "vue": "^2.6.6",
     "vue-resource": "^1.5.1",
