--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,60 +1,39 @@
-user www-data;
-worker_processes auto;
-pid /run/nginx.pid;
-include /etc/nginx/modules-enabled/*.conf;
+server {
+		listen 80;
+		listen [::]:80;
 
-events {
-  worker_connections 1024;
-}
+		root /home/user01/app-minitrack/static;
+		index index.html index.htm index.nginx-debian.html;
 
-http {
-  upstream api {
-    server api:8000;
-  }
+		access_log /var/log/nginx/app-minitrack.log;
+		error_log /var/log/nginx/app-minitrack.error.log;
 
-  upstream app {
-    server app:3000;
-  }
+		server_name minitrack.kubedev.co.uk www.minitrack.kubedev.co.uk;
 
-  server {
-    listen 80;
+		location /api {
+			proxy_pass 					http://localhost:8542;
+			proxy_http_version  1.1;
+			proxy_redirect      default;
+			proxy_set_header    Upgrade $http_upgrade;
+			proxy_set_header    Connection "upgrade";
+			proxy_set_header    Host $host;
+			proxy_set_header    X-Real-IP $remote_addr;
+			proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header    X-Forwarded-Host $server_name;
+		}
+		location /admin {
+  		proxy_pass 					http://localhost:8107;
+  		proxy_http_version  1.1;
+  		proxy_redirect      default;
+  		proxy_set_header    Upgrade $http_upgrade;
+  		proxy_set_header    Connection "upgrade";
+  		proxy_set_header    Host $host;
+  		proxy_set_header    X-Real-IP $remote_addr;
+  		proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+  		proxy_set_header    X-Forwarded-Host $server_name;
+  	}
 
-    server_name localhost 127.0.0.1;
-
-    location /api {
-      proxy_pass              http://api;
-      proxy_http_version  1.1;
-      proxy_redirect      default;
-      proxy_set_header    Upgrade $http_upgrade;
-      proxy_set_header    Connection "upgrade";
-      proxy_set_header    Host $host;
-      proxy_set_header    X-Real-IP $remote_addr;
-      proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header    X-Forwarded-Host $server_name;
-    }
-
-    location /admin {
-      proxy_pass              http://api;
-      proxy_http_version  1.1;
-      proxy_redirect      default;
-      proxy_set_header    Upgrade $http_upgrade;
-      proxy_set_header    Connection "upgrade";
-      proxy_set_header    Host $host;
-      proxy_set_header    X-Real-IP $remote_addr;
-      proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header    X-Forwarded-Host $server_name;
-    }
-
-    location / {
-      proxy_pass              http://app;
-      proxy_http_version  1.1;
-      proxy_redirect      default;
-      proxy_set_header    Upgrade $http_upgrade;
-      proxy_set_header    Connection "upgrade";
-      proxy_set_header    Host $host;
-      proxy_set_header    X-Real-IP $remote_addr;
-      proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header    X-Forwarded-Host $server_name;
-    }
-  }
+		location / {
+			try_files $uri /index.html;
+		}
 }
