--- a/example.env
+++ b/example.env
@@ -35,7 +35,6 @@ DATABASE_USER_TEST="dbUser"
 DATABASE_PASS_TEST="dbPassTestHere&"
 DATABASE_NAME_TEST="dbNameTestHere"
 
-
 #TOKEN_EXPIRE="604800"
 TOKEN_EXPIRE="1000"
 TOKEN_SECRET="TESTSECRET"
@@ -47,4 +46,7 @@ MAIL_HOST="api.eu.mailgun.net"
 MAIL_DOMAIN="mail.yourwebsite.co.uk"
 MAIL_API="key-longKeyHerething"
 
-
+# DEPLOY : PROGRAM FILE PATHS
+#		Find by using "which xxx"
+NPM="xxx"
+VENV="xxx"
