--- a/builder/package.json
+++ b/builder/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "start": "npm run watch",
     "watch": "nodemon -q -w ../app/src --ext '.' --exec './build.sh'"
   },
   "dependencies": {
