--- a/builder/package.json
+++ b/builder/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "npm run watch",
+    "build": "./build.sh",
     "watch": "nodemon -q -w ../app/src --ext '.' --exec './build.sh'"
   },
   "dependencies": {
